// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseListItem Component: Should render ExpenseListItem with expense 1 1`] = `
<div>
  <p>
    Description: 
    Water bill
  </p>
  <p>
    Amount: 
    $4,500.00
  </p>
  <p>
    Created At: 
    January 1st, 1970
  </p>
  <Link
    to="/edit/1"
  >
    Edit
  </Link>
</div>
`;

exports[`ExpenseListItem Component: Should render ExpenseListItem with expense 2 1`] = `
<div>
  <p>
    Description: 
    Rent
  </p>
  <p>
    Amount: 
    $2,500.00
  </p>
  <p>
    Created At: 
    December 28th, 1969
  </p>
  <Link
    to="/edit/2"
  >
    Edit
  </Link>
</div>
`;
